# Cpp-Plugin-System

./: .gitignore  CMakeLists.txt  PluginManager.h  SecondPlugin.cpp  StreamPrinter.cpp  StreamPrinter.h  StringFace.h  TestPlugin.cpp  main.cpp
files/: FileReader.cpp  FileReader.h  FileUtils.cpp  FileUtils.h  UniFileReader.h  UnixFileReader.cpp  WinFileReader.cpp
pluginloading/: IPlugin.h  MPluginLoader.cpp  PluginLoader.cpp  PluginLoader.h  PluginManager.cpp  PluginManager.h  RawLoader.cpp  RawLoader.h  TestPlugin.cpp
pluginloading/plugin/: IPlugin.cpp
pluginloading/plugins/: IPlugin.cpp  IPlugin.h  TestPlugin.cpp
test/: Test1.cpp
tests/: TestCase.h
tests/benchmarks/: ContextSwitchBenchmark.h  ContextSwitchReturnTypeBenchmark.h  EnableAndDisableBenchmark.h  LoadAndUnloadBenchmark.h
tests/util/: Stopwatch.h
utils/: StreamPrinter.h
